feat: handle all messages with atomic operation

--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,12 @@ name = "pypi"
 
 [packages]
 fastapi = "*"
-uvicorn = "*"
 pydantic = "*"
+redis = "*"
+uvicorn = "*"
 
 [dev-packages]
 black = "*"
 pylint = "*"
 pytest = "*"
+requests = "*"
